# Sentient-Splat-Slam

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
apps/viewer/: CMakeLists.txt  main.cpp
assets/test_scenes/: grid_gaussians.json  grid_gaussians_large.json  week2test.json
scripts/: build.ps1  clean.ps1  gen_galaxy_scene.py  gen_grid_scene.py  generate_gaussians_scene.py  run_viewer.ps1
src/core/: Camera.hpp  Log.cpp  Log.hpp  Time.cpp  Time.hpp  camera.cpp
src/render/: Buffers.cpp  Buffers.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/scene/: Scene.cpp  Scene.hpp  SceneIO.cpp  SceneIO.hpp
src/ui/: DebugUI.cpp  DebugUI.hpp
src/viewer/: App.cpp  App.hpp
